k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nlp
  labels:
    name: nlp
    project: projet_k8s
