k8s/04-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nlp-db
  namespace: nlp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nlp-db
  template:
    metadata:
      labels:
        app: nlp-db
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: dbdata
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
      volumes:
        - name: dbdata
          persistentVolumeClaim:
            claimName: nlp-db-pvc
