k8s/05-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nlp-db-svc
  namespace: nlp
spec:
  selector:
    app: nlp-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
