k8s/09-front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nlp-front-svc
  namespace: nlp
spec:
  selector:
    app: nlp-front
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
